Config and seed database

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#Configuration of Database H@2
+#The database was configurated as a dependecy when project was created via Spring Initializr
+#See pom.xml to see the dependencies
 
+
+#Connection configs
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+#Enable connection via web application
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+
+#Able to see the sql command
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
