--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
+########################################H2 CONFIGS###########################################
 #Configuration of Database H@2
 #The database was configurated as a dependecy when project was created via Spring Initializr
 #See pom.xml to see the dependencies
-
 
 #Connection configs
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -16,3 +16,11 @@ spring.h2.console.path=/h2-console
 #Able to see the sql command
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+
+########################################TWILIO ENVIRONMENT VARIABLES#############################
+twilio.sid=${TWILIO_SID}
+twilio.key=${TWILIO_KEY}
+twilio.phone.from=${TWILIO_PHONE_FROM}
+twilio.phone.to=${TWILIO_PHONE_TO}
